# LynD-substrate-modeling

./: .gitignore  README.md  pyproject.toml
LynDML.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
data/results/: ada.json  gb.json  logreg.json  mlp.json  rf.json  ridge.json  svc.json
data/xlsx/: A1_Ace +LynD_R1_001 1.xlsx  A2_Ace -LynD_R1_001.xlsx  A3_Sup +LynD_R1_001.xlsx  A4_Sup -LynD_R1_001.xlsx  A5_Elu +LynD_R1_001.xlsx  A6_Elu -LynD_R1_001.xlsx
src/: Plotter.py  analysis.py  dataset.py  ecfp.py  environment.yml  esm_embeddings.py  filter_and_fasta.ipynb  network.py  nomination.ipynb  pct_mod.py  percent_modified.py  train.sh  trainer.py  utils.py  vis_epi.ipynb
src/baseline/: base.sh  baselines.ipynb  prep.py  slurm-31663929.out  vis.py
src/checkpoints/: CNN_ECFP_epoch=05_val_accuracy=0.73.ckpt  CNN_cont_epoch=04_val_accuracy=0.73.ckpt  CNN_onehot_epoch=09_val_accuracy=0.72.ckpt  MLP_ECFP_epoch=09_val_accuracy=0.73.ckpt  MLP_cont_epoch=02_val_accuracy=0.73.ckpt  MLP_onehot_epoch=05_val_accuracy=0.73.ckpt  Transf_ECFP_epoch=34_val_accuracy=0.71.ckpt  Transf_cont_epoch=20_val_accuracy=0.72.ckpt  Transf_onehot_epoch=43_val_accuracy=0.72.ckpt
src/eda/: eda.ipynb
src/eda/.ipynb_checkpoints/: eda-checkpoint.ipynb
src/lightning_logs/version_31842345/: events.out.tfevents.1709157808.g1416ood06.ll.unc.edu.1499139.0  (+23 more)
src/model_weights/: LynD_NNK7_rd1.ckpt  LynD_NNK7_rd2.ckpt  LynD_NNK7_rd3.ckpt
src/modules/: Plotter.py  dataset.py  ecfp.py  network.py  utils.py
src/notebooks/: eda.ipynb  nom.ipynb  nomination.ipynb
src/runscripts/: analyze.sh  train.sh
(+15 files in other folders)
